[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mentior"
version = "0.1.0-dev1"
authors = [
    { name = "ArkStruct" },
]
description = "An API client for VTube Studio"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pydantic>=2.7",
    "websockets>=12.0",
]

[project.urls]
Homepage = "https://github.com/ArkStructCodes/mentior"
Repository = "https://github.com/ArkStructCodes/mentior"
Issues = "https://github.com/ArkStructCodes/mentior/issues"
